--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
