--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
